--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
     <div id="display-attachment"></div>
 
     <div id="cash-register-body">
-      <div id="buttons"></div>
+      <div id="buttons">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <div id="cash-in-drawer">
         <span><strong>Change in drawer:</strong></span>
         <span id="change-display"></span>
