Finish styling cash register

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="cash-register">
     <div id="display">
       <div id="inner-display">
-        <span id="price-display">$3.26</span>
+        <span>Total: <span id="price-display">$3.26</span></span>
       </div>
     </div>
     <div id="display-attachment"></div>
