Add display price and display remaining cash in register functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="cash-register">
     <div id="display">
       <div id="inner-display">
-        <span>Total: <span id="price-display">$3.26</span></span>
+        <span>Total: <span id="price-display"></span></span>
       </div>
     </div>
     <div id="display-attachment"></div>
@@ -36,7 +36,7 @@
       </div>
       <div id="cash-in-drawer">
         <span><strong>Change in drawer:</strong></span>
-        <span id="change-display"></span>
+        <ul id="change-display"></ul>
       </div>
     </div>
 
